       - autoraise fixes
       - fixed the "kwm needs cpu when dragging windows" bug
       - ontoDesktop also moves the transient windows
       - transient windows cannot be moved onto different desktops
         separately anymore
       - transient windows cannot be iconified separately anymore
       - few smaller fixes

       - cosmectic problem with my pushbuttons fixed

  patchlevel 15:
       - transient windows are iconified/deiconified with their parent
         window. They also dissappear for the modules and the Mod1-Tab
         traversal if they were automatically iconified.
       - new commandline option "-nosession" to disable the restoration
         of the previous session.
       - new list entry "proxyignore" in the [session]-group of kwmrc
         to specify WM_COMMANDS that should be ignored
       - fixed the minicli-focus-follow-mouse problem
       - yakb fixed for Stephan, small adaption to new kcc module
          
  patchlevel 14:
       - new keybindings Control-F[1..8] for virtual desktop switching
       - new option "ControlTab=[on,off]" to switch off the Control-Tab
         shortcut.
       - fixed the "last window is iconified and deficonified"-focus-
         follows-mouse-bug
       - fixed the autoraise-over-operations-menu bug 
       - Uwe's fix for the timing problem of the resize animation
       - history command completion with Tab in minicli
       - KProcess for execution
       - Fix for unsavedDataHint handling

  patchlevel 13:
       - new decoration style (tiny decoration). Useful for floating
         menu- or toolbars. Can be set via KWM::setDecoration(...)
       - KWM::geometry(Window w, bool including_frame = FALSE) has
         including_frame as additional argument. Useful for
         pager modules.
       - workaround to the "X freezes when pasting in minicli"-bug
         
  patchlevel 12:
       - new command "execute" for minicli (temporary solution until
         we finally get a real kcli)
